[tool.poetry]
name = "myaakash"
version = "1.1.0"
description = "MyAakash API Bindings for Python"
authors = ["Harsh Sharma <goharsh007@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
httpx = {extras = ["http2"], version = "^0.27.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
